@@ -25,6 +25,7 @@ FRONTEND
 
 INSTALLER
 	Added: Conditional statement feature for install.xml files (copy_config items only)
+	Fixed: Plugin setup listeners are no longer registered (regression fix)
 
 PLUGINS
 	Updated: API version to 1.0.4
